--- a/client/Pipfile
+++ b/client/Pipfile
@@ -9,7 +9,7 @@ verify_ssl = true
 click = "==7.1.2"
 gunicorn = "==20.0.4"
 itsdangerous = "==1.1.0"
-python-dotenv = "~=0.13"
+python-dotenv = "==0.14.0"
 six = "==1.15.0"
 psycopg2 = "==2.8.5"
 Flask = "==1.1.2"
@@ -22,9 +22,6 @@ SQLAlchemy = "==1.3.19"
 Werkzeug = "==1.0.1"
 WTForms = "==2.3.3"
 Flask-JWT-Extended = "==3.24.1"
-psycopg2-binary = "*"
-alembic = "*"
-flask-migrate = "*"
 
 [requires]
 python_version = "3.8"
