--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,6 @@ Werkzeug==1.0.1
 WTForms==2.3.3
 psycopg2==2.8.5
 flask-jwt-extended==3.24.1
+psycopg2==2.8.5
+alembic==1.4.2
+flask-migrate==2.5.3
